First part of the lesson about caches

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -20,3 +20,9 @@ blockquote {
 .site-nav, .site-header, .site-footer {
   width: 300px;
 } }
+
+.center-image
+{
+    margin: 0 auto;
+    display: block;
+}
